# plai_cv

./: .gitignore
calibration/: PitchCorners.py  calibration_main.py
src/: pyproject.toml  remap-gpt-sphere-frozen.py
src/acquisition/: VideoReader.py
src/apps/: player_movement_heatmap.py  top_view_tracking.py
src/calibration/: Camera.py  PitchCorners.py  VideoAverager.py  calibration_iterative.py  calibration_main.py  calibration_pnp.py  calibration_pnp_explicit.py  calibration_pnp_iterative.py  find_pitch_corners_hough.py  pitch_calib.py  pitch_corners_const.py  pitch_keypoints.py  pitch_keypoints_3d.py
src/detection/: detect_players_bboxes_in_video.py  detection_utils.py
src/tracking/: kalman.py
src/utils/: paths.py  visualizations.py
textual/: commands.md
utils/: paths.py
